--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -56,43 +56,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Criação dos nós do tipo User:<br/>\n",
     "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
-    "CREATE (:User {Id: line.Id, Age: line.Age, Gender: line.Gender, Education: line.Education, Country: line.Country, Ethnicity: <br/>line.Ethnicity, Nscore: line.Nscore, Escore: line.Escore, Oscore: line.Oscore, Ascore: line.Ascore, Cscore: line.Cscore, I: line.Impulsive, SS: line.SS})\n",
+    "CREATE (:User {Id: line.Id, Age: line.Age, Gender: line.Gender, Education: line.Education, Country: line.Country, Ethnicity:line.Ethnicity, Nscore: line.Nscore, Escore: line.Escore, Oscore: line.Oscore, Ascore: line.Ascore, Cscore: line.Cscore, I: line.Impulsive, SS: line.SS});\n",
     "\n",
-    "CREATE (:Substance {nome: \"Alcohol\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Amphet\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Amyl\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Benzos\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Caff\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Cannabis\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Choc\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Coke\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Crack\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Ectasy\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Herion\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Ketamine\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Legalh\"})<br/>\n",
-    "CREATE (:Substance {nome: \"LSD\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Meth\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Mushrooms\"})<br/>\n",
-    "CREATE (:Substance {nome: \"Nicotine\"})<br/>\n",
-    "CREATE (:Substance {nome: \"VSA\"})<br/>\n",
+    "Simplificação:<br/>\n",
+    "MATCH (p:User)<br/>\n",
+    "WHERE p.Gender = 0.48246<br/>\n",
+    "SET p.Gender = 'F';<br/>\n",
+    "MATCH (p:User)<br/>\n",
+    "WHERE p.Gender = \"-0.48246\"<br/>\n",
+    "SET p.Gender = 'M';<br/>\n",
     "\n",
+    "Criação dos nós do tipo Substance:<br/>\n",
+    "CREATE (:Substance {nome: \"Alcohol\", legal: TRUE})<br/>\n",
+    "CREATE (:Substance {nome: \"Amphet\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Amyl\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Benzos\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Caff\", legal: TRUE})<br/>\n",
+    "CREATE (:Substance {nome: \"Cannabis\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Choc\", legal: TRUE})<br/>\n",
+    "CREATE (:Substance {nome: \"Coke\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Crack\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Ecstasy\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Herion\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Ketamine\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Legalh\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"LSD\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Meth\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Mushrooms\", legal: FALSE})<br/>\n",
+    "CREATE (:Substance {nome: \"Nicotine\", legal: TRUE})<br/>\n",
+    "CREATE (:Substance {nome: \"VSA\", legal: FALSE});<br/>\n",
+    "\n",
+    "Criação das arestas do tipo Uses entre um User que usa uma droga do tipo Substance:<br/>\n",
     "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
-    "MATCH (user:User {Id:line.Id}) WHERE line.Alcohol <> \"CL0\"<br/>\n",
+    "MATCH (user:User {Id:line.Id})WHERE line.Alcohol <> \"CL0\"<br/>\n",
     "MATCH (sub:Substance {nome: \"Alcohol\"})<br/>\n",
-    "CREATE (user)-[:Uses {frequency: line.Alcohol}]->(sub)<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Alcohol}]->(sub);<br/>\n",
     "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
     "MATCH (user:User {Id:line.Id}) WHERE line.Amphet <> \"CL0\"<br/>\n",
     "MATCH (sub:Substance {nome: \"Amphet\"})<br/>\n",
-    "CREATE (user)-[:Uses {frequency: line.Amphet}]->(sub)<br/>"
+    "CREATE (user)-[:Uses {frequency: line.Amphet}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Amyl <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Amyl\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Amyl}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Benzos <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Benzos\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Benzos}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Caff <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Caff\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Caff}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Cannabis <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Cannabis\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Cannabis}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Choc <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Choc\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Choc}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Coke <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Coke\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Coke}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Crack <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Crack\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Crack}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Ecstasy <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Ecstasy\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Ecstasy}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Herion <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Herion\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Herion}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Ketamine <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Ketamine\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Ketamine}]->(sub;)<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Legalh <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Legalh\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Legalh}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.LSD <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"LSD\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.LSD}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Meth <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Meth\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Meth}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Mushrooms <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Mushrooms\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Mushrooms}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Nicotine <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Nicotine\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Nicotine}]->(sub);<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.VSA <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"VSA\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.VSA}]->(sub);<br/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. Traduzindo os valores"
+    "# I. Traduzindo os valores da base de dados"
    ]
   },
   {
@@ -314,6 +389,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Quantos já usaram mais de uma substância ilegal alguma vez na vida?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
+    "WITH u, COUNT(*) AS usos<br/>\n",
+    "WHERE usos > 1<br/>\n",
+    "RETURN COUNT(*) AS NumeroPessoas;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Número de pessoas que utilizam uma droga todo dia:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Análise de Correlação de Variáveis"
    ]
   },
@@ -321,7 +425,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* "
+    "* Usuários de cannabis tendem a usar outras drogas ilegais?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Número de pessoas que usam cannabis:\n",
+    "\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})\n",
+    "RETURN COUNT(u) AS NumeroPessoas;\n",
+    "\n",
+    "Resposta: 1472.\n",
+    "\n",
+    "Número de pessoas que usam cannabis e outra droga ilegal:\n",
+    "\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})\n",
+    "WITH u, COUNT(*) AS usos\n",
+    "WHERE usos > 1\n",
+    "RETURN COUNT(*) AS NumeroPessoas\n",
+    "\n",
+    "Resposta: 1338.\n",
+    "\n",
+    "Portanto, 9089673913 das pessoas que "
    ]
   }
  ],
