--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -449,7 +449,7 @@
     "\n",
     "Resposta: 1338.\n",
     "\n",
-    "Portanto, 9089673913 das pessoas que "
+    "Portanto, 90.89673913% das pessoas que utilizam cannabis, utilizam outra droga ilícita."
    ]
   }
  ],
