--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -397,9 +397,9 @@
    "metadata": {},
    "source": [
     "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
-    "WITH u, COUNT(*) AS usos<br/>\n",
+    "WITH u, COUNT(`*`) AS usos<br/>\n",
     "WHERE usos > 1<br/>\n",
-    "RETURN COUNT(*) AS NumeroPessoas;"
+    "RETURN COUNT(`*`) AS NumeroPessoas;"
    ]
   },
   {
@@ -412,7 +412,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "MATCH (u:User)-[:Uses {frequency: \"CL6\"}]->(:Substance {legal: FALSE})<br/>\n",
+    "WITH u, COUNT(`*`) AS usos<br/>\n",
+    "RETURN COUNT(`*`) AS NumeroPessoas;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -434,18 +438,18 @@
    "source": [
     "Número de pessoas que usam cannabis:\n",
     "\n",
-    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
     "RETURN COUNT(u) AS NumeroPessoas;\n",
     "\n",
     "Resposta: 1472.\n",
     "\n",
     "Número de pessoas que usam cannabis e outra droga ilegal:\n",
     "\n",
-    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})\n",
-    "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})\n",
-    "WITH u, COUNT(*) AS usos\n",
-    "WHERE usos > 1\n",
-    "RETURN COUNT(*) AS NumeroPessoas\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
+    "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
+    "WITH u, COUNT(`*`) AS usos<br/>\n",
+    "WHERE usos > 1<br/>\n",
+    "RETURN COUNT(`*`) AS NumeroPessoas\n",
     "\n",
     "Resposta: 1338.\n",
     "\n",
