--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "Simplificação:<br/>\n",
     "MATCH (p:User)<br/>\n",
-    "WHERE p.Gender = 0.48246<br/>\n",
+    "WHERE p.Gender = \"0.48246\"<br/>\n",
     "SET p.Gender = 'F';<br/>\n",
     "MATCH (p:User)<br/>\n",
     "WHERE p.Gender = \"-0.48246\"<br/>\n",
@@ -136,7 +136,7 @@
     "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
     "MATCH (user:User {Id:line.Id}) WHERE line.Ketamine <> \"CL0\"<br/>\n",
     "MATCH (sub:Substance {nome: \"Ketamine\"})<br/>\n",
-    "CREATE (user)-[:Uses {frequency: line.Ketamine}]->(sub;)<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Ketamine}]->(sub);<br/>\n",
     "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
     "MATCH (user:User {Id:line.Id}) WHERE line.Legalh <> \"CL0\"<br/>\n",
     "MATCH (sub:Substance {nome: \"Legalh\"})<br/>\n",
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Quantos já usaram mais de uma substância ilegal alguma vez na vida?"
+    "* Quantos já usaram mais de uma substância ilícita alguma vez na vida?"
    ]
   },
   {
@@ -399,14 +399,16 @@
     "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
     "WITH u, COUNT(`*`) AS usos<br/>\n",
     "WHERE usos > 1<br/>\n",
-    "RETURN COUNT(`*`) AS NumeroPessoas;"
+    "RETURN COUNT(`*`) AS NumeroPessoas;\n",
+    "\n",
+    "Resposta: 1373."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Número de pessoas que utilizam uma droga todo dia:"
+    "* Número de pessoas que utilizam uma droga ilícita todo dia:"
    ]
   },
   {
@@ -414,8 +416,9 @@
    "metadata": {},
    "source": [
     "MATCH (u:User)-[:Uses {frequency: \"CL6\"}]->(:Substance {legal: FALSE})<br/>\n",
-    "WITH u, COUNT(`*`) AS usos<br/>\n",
-    "RETURN COUNT(`*`) AS NumeroPessoas;"
+    "RETURN COUNT(u) AS NumeroPessoas;\n",
+    "\n",
+    "Resposta: 886."
    ]
   },
   {
@@ -429,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Usuários de cannabis tendem a usar outras drogas ilegais?"
+    "* Usuários de cannabis tendem a usar outras drogas ilícitas?"
    ]
   },
   {
