--- a/jupyter/trabalho-etapa02.ipynb
+++ b/jupyter/trabalho-etapa02.ipynb
@@ -127,7 +127,7 @@
     "    Education,\n",
     "    Country,\n",
     "    Ethnicity\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');\n",
+    "FROM CSVREAD('https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv');\n",
     "\n",
     "CREATE TABLE Personalidade (\n",
     "    User_Id VARCHAR(5) NOT NULL,\n",
@@ -151,7 +151,7 @@
     "    Cscore,\n",
     "    Impulsive,\n",
     "    SS\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');\n",
+    "FROM CSVREAD('https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv');\n",
     "\n",
     "CREATE TABLE Consumo (\n",
     "    User_Id VARCHAR(5) NOT NULL,\n",
@@ -199,7 +199,7 @@
     "    Nicotine,\n",
     "    Semer,\n",
     "    VSA\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');"
+    "FROM CSVREAD('https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv');"
    ]
   },
   {
@@ -447,7 +447,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee6a03a-8ef6-4732-8a10-ae4cecbc889a",
+       "model_id": "f2febe6a-e58d-4b4b-ab45-9e6bd05fe331",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,7 +599,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91042c00-c1b4-47f3-a1aa-847fd00f8749",
+       "model_id": "f64f1a3e-97d7-4078-aa5e-9545fba9f429",
        "version_major": 2,
        "version_minor": 0
       },
@@ -665,7 +665,7 @@
     {
      "data": {
       "text/plain": [
-       "375"
+       "551"
       ]
      },
      "execution_count": 9,
@@ -676,7 +676,7 @@
    "source": [
     "SELECT COUNT(*) N_Usam_DrogaIlicita\n",
     "FROM Personalidade P, UsaIlicitasId U\n",
-    "WHERE P.Nscore < '-1.55078' AND P.User_Id = U.User_Id;"
+    "WHERE P.Nscore > '0.00004' AND P.User_Id = U.User_Id;"
    ]
   },
   {
