--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -380,15 +380,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ou redes complexas baseadas, por exemplo, em um grafo de coocorrência;\n",
-    "* caminhos no grafo;\n",
-    "* árvores ou grafos orientados acíclicos, a exemplo de taxonomias."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "* Quantos já usaram mais de uma substância ilícita alguma vez na vida?"
    ]
   },
@@ -399,16 +390,18 @@
     "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
     "WITH u, COUNT(`*`) AS usos<br/>\n",
     "WHERE usos > 1<br/>\n",
-    "RETURN COUNT(`*`) AS NumeroPessoas;\n",
+    "RETURN COUNT(`*`) AS NumeroPessoas;<br/>\n",
     "\n",
-    "Resposta: 1373."
+    "Resposta: 1373.\n",
+    "\n",
+    "72,83% já usaram mais de uma droga ilícita alguma vez na vida."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Número de pessoas que utilizam uma droga ilícita todo dia:"
+    "* Quantos usam pelo menos uma droga ilícita com muita frequência?"
    ]
   },
   {
@@ -416,9 +409,11 @@
    "metadata": {},
    "source": [
     "MATCH (u:User)-[:Uses {frequency: \"CL6\"}]->(:Substance {legal: FALSE})<br/>\n",
-    "RETURN COUNT(u) AS NumeroPessoas;\n",
+    "RETURN COUNT(DISTINCT u) AS NumeroPessoas;\n",
     "\n",
-    "Resposta: 886."
+    "Resposta: 639.\n",
+    "\n",
+    "33,9% usam pelo menos uma ilícita todos os dias."
    ]
   },
   {
@@ -432,31 +427,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Usuários de cannabis tendem a usar outras drogas ilícitas?"
+    "* Usuários de maconha tendem a usar outras drogas ilícitas?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Número de pessoas que usam cannabis:\n",
+    "Número de pessoas que usam cannabis:<br/>\n",
+    "MATCH (u:User)-[r:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
+    "WHERE r.frequency = \"CL3\" OR r.frequency = \"CL4\"<br/>\n",
+    "OR r.frequency = \"CL5\" OR r.frequency = \"CL6\"<br/>\n",
+    "RETURN COUNT(u) AS NumeroPessoas;<br/>\n",
+    "Resposta: 999.\n",
     "\n",
-    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
-    "RETURN COUNT(u) AS NumeroPessoas;\n",
-    "\n",
-    "Resposta: 1472.\n",
-    "\n",
-    "Número de pessoas que usam cannabis e outra droga ilegal:\n",
-    "\n",
-    "MATCH (u:User)-[:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
+    "Número de pessoas que usam cannabis e outra droga ilícita<br/>\n",
+    "MATCH (u:User)-[r:Uses]->(:Substance {nome: \"Cannabis\"})<br/>\n",
+    "WHERE r.frequency = \"CL3\" OR r.frequency = \"CL4\"<br/>\n",
+    "OR r.frequency = \"CL5\" OR r.frequency = \"CL6\"<br/>\n",
     "MATCH (u:User)-[:Uses]->(:Substance {legal: FALSE})<br/>\n",
     "WITH u, COUNT(`*`) AS usos<br/>\n",
     "WHERE usos > 1<br/>\n",
-    "RETURN COUNT(`*`) AS NumeroPessoas\n",
+    "RETURN COUNT(`*`) AS NumeroPessoas<br/>\n",
+    "Resposta: 978.\n",
     "\n",
-    "Resposta: 1338.\n",
+    "97,90% das pessoas que utilizam cannabis, utilizam outra droga ilícita."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Quantos usuários muito frequentes de drogas ilícitas tem um diploma universitário?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MATCH (u:User)-[:Uses {frequency: \"CL6\"}]->(:Substance {legal: FALSE})<br/>\n",
+    "WHERE u.Education > \"0\"<br/>\n",
+    "RETURN COUNT(DISTINCT u) AS NumeroPessoas;\n",
     "\n",
-    "Portanto, 90.89673913% das pessoas que utilizam cannabis, utilizam outra droga ilícita."
+    "Resposta: 179.\n",
+    "\n",
+    "28% dos usuários muito frequentes de ilícitas tem um diploma universitário."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Quantos usuários muito frequentes de drogas ilícitas são mulheres?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MATCH (u:User)-[:Uses {frequency: \"CL6\"}]->(:Substance {legal: FALSE})<br/>\n",
+    "WHERE u.Gender = 'F'<br/>\n",
+    "RETURN COUNT(DISTINCT u) AS NumeroPessoas;\n",
+    "\n",
+    "Resposta: 222.\n",
+    "\n",
+    "34,74% dos usuários muito frequentes de ilícitas são mulheres."
    ]
   }
  ],
