--- a/jupyter/trabalho-etapa04.ipynb
+++ b/jupyter/trabalho-etapa04.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Analisando o Risco de um Usuário utilizar Drogas Ilícitas\n",
-    "* Esta tarefa demonstrará o processo do desenvolvimento do sistema capaz de analizar o risco de um usuário utilizar drogas ilícitas."
+    "* Esta tarefa demonstrará o processo do desenvolvimento do sistema capaz de analisar o risco de um usuário utilizar drogas ilícitas."
    ]
   },
   {
@@ -859,6 +859,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%endpoint http://dbpedia.org/sparql\n",
+    "%display table\n",
+    "%show all"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -866,16 +877,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Dependency\n",
     "  where {dbr:Caffeine dbp:dependencyLiability ?Dependency}"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Addiction\n",
     "  where {dbr:Caffeine dbp:addictionLiability ?Addiction}"
@@ -889,16 +904,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Dependency\n",
     "  where {dbr:Cocaine dbp:dependencyLiability ?Dependency}"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Addiction\n",
     "  where {dbr:Cocaine dbp:addictionLiability ?Addiction}"
@@ -912,16 +931,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Dependency\n",
     "  where {dbr:Nicotine dbp:dependencyLiability ?Dependency}"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Addiction\n",
     "  where {dbr:Nicotine dbp:addictionLiability ?Addiction}"
@@ -935,16 +958,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Addiction\n",
     "  where {dbr:Lysergic_acid_diethylamide dbp:addictionLiability ?Addiction}"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "select ?Dependency\n",
     "  where {dbr:Lysergic_acid_diethylamide dbp:dependencyLiability ?Dependency}"
